--- a/src/components/Issue/Issue.css
+++ b/src/components/Issue/Issue.css
@@ -1,27 +1,10 @@
 .Issue{
+  text-align: left;
   position: relative;
   display: block;
-  margin: 0 3px 3px 0;
+  margin-top: 2%;
 }
 
 .Issue:after{
   clear: both;
-}
-
-.Issue .Left-Container{
-  display: inline-block;
-  width: 200px;
-  height: 120px;
-}
-
-.Issue .Left-Container .Author-Picture{
-  display: inline-block;
-  width: 60%;
-  height: auto;
-}
-
-.Issue .Right-Container{
-  display: inline-block;
-  width: 50%;
-  text-align: center;
 }
