--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -3,3 +3,10 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+
+ul {
+  padding-left:0;
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
